@@ -63,6 +63,10 @@ module Radiant
     def view_paths
       extensions.map { |extension| "#{extension.root}/app/views" }.select { |d| File.directory?(d) }.reverse
     end
+    
+    def metal_paths
+      extensions.map { |extension| "#{extension.root}/app/metal" }.select { |d| File.directory?(d) }.reverse
+    end
 
     # Load the extensions
     def load_extensions
@@ -101,7 +105,7 @@ module Radiant
 
       def load_paths_for(dir)
         if File.directory?(dir)
-          %w(lib app/models app/controllers app/helpers test/helpers).collect do |p|
+          %w(lib app/models app/controllers app/metal app/helpers test/helpers).collect do |p|
             path = "#{dir}/#{p}"
             path if File.directory?(path)
           end.compact << dir
